# wakaama

examples/proficlient/: CMakeLists.txt  lcm_diagnosis_t.c  lcm_diagnosis_t.h  lcm_generic_msg_t.c  lcm_generic_msg_t.h  lcm_io_t.c  lcm_io_t.h  lwm2mproficlient.c  object_device.c  profipsolcm.lcm  system_api.c  test_object.c
